:zap: add user info in user page
